Prevent wrapping masterbar item text

--- a/client/layout/masterbar/style.scss
+++ b/client/layout/masterbar/style.scss
@@ -29,6 +29,7 @@ $autobar-height: 20px;
 	transition: transform 0.2s ease-out;
 	box-sizing: border-box;
 	justify-content: space-between;
+	white-space: nowrap;
 
 	.is-support-session & {
 		// Use generic colors so that they override whatever theme colors the user has picked.
